# host/dbmodels.py
@@ -1,10 +1,102 @@
 import enum
-from sqlalchemy import Column, Integer, String, Numeric, Enum, ForeignKey
-from sqlalchemy import orm
+from sqlalchemy import Column, Integer, String, Numeric, Boolean
+from sqlalchemy import Enum, ForeignKey, orm
 from database import Base
 
 _ImportStat = enum.Enum("ImportStatus",
                         "processing done failed")
+
+#
+# common dictionary key names used for serialization
+#
+MODEL = "model"
+NAME = "name"
+DESC = "description"
+HIDDEN = "hidden"
+POSITION = "position"
+SWRREF99 = "sweref99"
+DEF_POS = "defaultPosition"
+
+
+class Device(Base):
+    __tablename__ = "devices"
+
+    serialNo = Column(String, primary_key=True)
+
+    model_instances = orm.relationship("ModelInstance")
+
+    @staticmethod
+    def get(serialNo):
+        return Device.query.filter(Device.serialNo == serialNo).first()
+
+
+def _add_if_not_none(d, name, val):
+    if val is None:
+        # don't add
+        return
+
+    d[name] = val
+
+
+class ModelInstance(Base):
+    __tablename__ = "model_instances"
+
+    id = Column(Integer, primary_key=True)
+    name = Column(String)
+    description = Column(String)
+    hidden = Column(Boolean)
+
+    _model_id = Column("model", Integer, ForeignKey("models.id"))
+    model = orm.relationship("Model")
+
+    _position_id = Column("position", Integer, ForeignKey("swerefPos.id"))
+    position = orm.relationship("SwerefPos")
+
+    _device = Column("device", String, ForeignKey("devices.serialNo"))
+    device = orm.relationship("Device")
+
+    def as_dict(self):
+        d = dict(model=str(self.model.id),
+                 hidden=self.hidden)
+
+        _add_if_not_none(d, NAME, self.name)
+        _add_if_not_none(d, DESC, self.description)
+
+        if self.position is not None:
+            d[POSITION] = dict(sweref99=self.position.as_dict())
+
+        return d
+
+    @staticmethod
+    def from_dict(device, data):
+        def _get_position():
+            if POSITION in data:
+                return SwerefPos.from_dict(data[POSITION][SWRREF99])
+
+            # no instance position specified,
+            # use model's default position if available
+            if mod.default_position is not None:
+                return mod.default_position.copy()
+
+            # position not known for this instance at this time
+            return None
+
+        modId = data[MODEL]
+        mod = Model.get(modId)
+        if mod is None:
+            raise Exception("no model with id %s exists" % modId)
+
+        args = dict(
+            name=data.get(NAME),
+            description=data.get(DESC),
+            hidden=data.get(HIDDEN, False),
+            model=mod,
+            device=device,
+            position=_get_position(),
+        )
+
+        return ModelInstance(**args)
+
 
 class Model(Base):
     __tablename__ = "models"
@@ -17,12 +109,10 @@ class Model(Base):
     default_position_id = Column(Integer, ForeignKey("swerefPos.id"))
     default_position = orm.relationship("SwerefPos")
 
-    # dictionary key names used for serialization
-    NAME = "name"
-    DESC = "description"
-    DEF_POS = "defaultPosition"
-
     def as_dict(self):
+        # TODO don't include optional fields when
+        # thier value is None (in the database so to speak)
+
         d = dict(name=self.name,
                  description=self.description,
                  importStatus=self.import_status.name)
@@ -34,22 +124,22 @@ class Model(Base):
         return d
 
     def update(self, new_vals):
-        if Model.NAME in new_vals:
-            self.name = new_vals[Model.NAME]
+        if NAME in new_vals:
+            self.name = new_vals[NAME]
 
-        if Model.DESC in new_vals:
-            self.description = new_vals[Model.DESC]
+        if DESC in new_vals:
+            self.description = new_vals[DESC]
 
     @staticmethod
     def from_dict(data):
-        args = dict(name=data[Model.NAME],
-                    description=data[Model.DESC],
+        args = dict(name=data[NAME],
+                    description=data[DESC],
                     import_status=_ImportStat.processing)
 
         # add default position of specified
-        if Model.DEF_POS in data:
+        if DEF_POS in data:
             args["default_position"] = \
-                SwerefPos.from_dict(data[Model.DEF_POS]["sweref99"])
+                SwerefPos.from_dict(data[DEF_POS][SWRREF99])
 
         return Model(**args)
 
@@ -69,6 +159,16 @@ class SwerefPos(Base):
     roll = Column(Numeric)
     pitch = Column(Numeric)
     yaw = Column(Numeric)
+
+    def copy(self):
+        return SwerefPos(
+            projection=self.projection,
+            x=self.x,
+            y=self.y,
+            z=self.z,
+            roll=self.roll,
+            pitch=self.pitch,
+            yaw=self.yaw)
 
     @staticmethod
     def from_dict(data):
