# host/swagger/hagring-api.yaml
@@ -33,7 +33,6 @@ paths:
           description: Error parsing request body
           schema:
             $ref: '#/definitions/ErrorResponse'
-
   /models/{modelID}:
     put:
       summary: Update model
@@ -81,7 +80,6 @@ paths:
           description: Model not found
           schema:
             $ref: '#/definitions/ErrorResponse'
-
     delete:
       summary: Delete model
       operationId: models.delete
@@ -98,8 +96,70 @@ paths:
           description: Model not found
           schema:
             $ref: '#/definitions/ErrorResponse'
+  /device/{deviceSerialNo}/models:
+    post:
+      summary: Set active model instances on the device
+      operationId: instances.set
+      consumes:
+        - application/json
+      parameters:
+        - name: deviceSerialNo
+          in: path
+          description: ID of the model to update
+          required: true
+          type: string
+        - in: body
+          name: modelInstances
+          description: TBD
+          schema:
+            $ref: '#/definitions/ModelInstances'
+      responses:
+        204:
+          description: Model instances successfully created
+    get:
+      summary: Get active model instances on the device
+      operationId: instances.get
+      produces:
+        - application/json
+      parameters:
+        - name: deviceSerialNo
+          in: path
+          description: ID of the model to update
+          required: true
+          type: string
+      responses:
+        200:
+          description: Current model instances on the device
+          schema:
+            $ref: '#/definitions/ModelInstances'
+        404:
+          description: Device or Model not found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
 
 definitions:
+  ModelInstances:
+    type: object
+    properties:
+      modelInstances:
+        type: array
+        items:
+          $ref: '#/definitions/ModelInstance'
+  ModelInstance:
+    type: object
+    properties:
+      model:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      hidden:
+        type: boolean
+      position:
+        $ref: '#/definitions/Position'
+    required: [model]
   ModelUpdate:
     type: object
     properties:
